--- a/index.html
+++ b/index.html
@@ -511,52 +511,68 @@
             gap: 24px;
         }
 
+        /* Pricing Card - Premium Glassmorphism Style (matching planos.html) */
         .pricing-card {
-            background: var(--bg-card);
-            border-radius: var(--radius-xl);
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 24px;
             padding: 32px;
             display: flex;
             flex-direction: column;
             position: relative;
-            border: 1px solid var(--border-secondary);
             transition: all 0.3s ease;
         }
 
         .pricing-card:hover {
-            transform: translateY(-4px);
-            box-shadow: var(--shadow-lg), var(--shadow-glow);
+            transform: translateY(-8px);
+            box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.5);
+            border-color: rgba(20, 184, 166, 0.3);
         }
 
         .pricing-card.featured {
-            border: 2px solid var(--accent-primary);
-            box-shadow: var(--shadow-glow);
+            background: rgba(20, 184, 166, 0.05);
+            border: 1px solid #14B8A6;
+            box-shadow: 0 0 30px rgba(20, 184, 166, 0.15);
+            transform: scale(1.03);
+            z-index: 10;
+        }
+
+        .pricing-card.featured:hover {
+            transform: scale(1.03) translateY(-8px);
         }
 
         .pricing-card.featured::before {
             content: 'Mais Popular';
             position: absolute;
-            top: -12px;
+            top: -14px;
             left: 50%;
             transform: translateX(-50%);
-            background: var(--accent-gradient);
+            background: #14B8A6;
             color: white;
-            padding: 4px 16px;
-            border-radius: 20px;
             font-size: 12px;
-            font-weight: 600;
+            font-weight: 700;
+            padding: 6px 16px;
+            border-radius: 20px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            box-shadow: 0 4px 12px rgba(20, 184, 166, 0.4);
+            z-index: 20;
         }
 
         .plan-name {
-            font-size: 22px;
+            font-size: 24px;
             font-weight: 700;
-            color: var(--text-primary);
-            margin-bottom: 4px;
+            color: white;
+            margin-bottom: 8px;
         }
 
         .plan-description {
             font-size: 14px;
-            color: var(--text-muted);
+            color: #94A3B8;
             margin-bottom: 24px;
+            min-height: 42px;
         }
 
         .plan-price {
@@ -570,20 +586,21 @@
         }
 
         .price-currency {
-            font-size: 18px;
-            font-weight: 600;
-            color: var(--text-secondary);
+            font-size: 20px;
+            color: #94A3B8;
+            font-weight: 500;
         }
 
         .price-value {
             font-size: 42px;
-            font-weight: 700;
-            color: var(--text-primary);
+            font-weight: 800;
+            color: white;
+            letter-spacing: -1px;
         }
 
         .price-period {
             font-size: 14px;
-            color: var(--text-muted);
+            color: #64748B;
         }
 
         .price-annual {
@@ -595,7 +612,7 @@
         .price-contact {
             font-size: 20px;
             font-weight: 600;
-            color: var(--text-primary);
+            color: white;
         }
 
         .plan-features {
@@ -606,16 +623,16 @@
         .feature-item {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
             padding: 8px 0;
             font-size: 14px;
-            color: var(--text-secondary);
+            color: #E2E8F0;
         }
 
         .feature-item svg {
             width: 18px;
             height: 18px;
-            stroke: var(--color-success);
+            color: #14B8A6;
             flex-shrink: 0;
         }
 
@@ -626,7 +643,37 @@
         .plan-cta .btn {
             width: 100%;
             padding: 14px;
+            border-radius: 12px;
+            font-weight: 600;
+            text-align: center;
+            border: none;
+            cursor: pointer;
+            transition: all 0.2s;
+            text-decoration: none;
+            display: flex;
             justify-content: center;
+        }
+
+        .plan-cta .btn-primary {
+            background: linear-gradient(135deg, #14B8A6 0%, #0D9488 100%);
+            color: white;
+            box-shadow: 0 4px 12px rgba(20, 184, 166, 0.3);
+        }
+
+        .plan-cta .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 20px rgba(20, 184, 166, 0.4);
+        }
+
+        .plan-cta .btn-outline {
+            background: transparent;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            color: white;
+        }
+
+        .plan-cta .btn-outline:hover {
+            background: rgba(255, 255, 255, 0.05);
+            border-color: white;
         }
 
         /* ================================================
@@ -778,12 +825,37 @@
                 display: none;
             }
 
+            .nav-buttons {
+                display: none;
+            }
+
             .hero {
                 padding: 100px 20px 60px;
             }
 
             .hero-content h1 {
                 font-size: 32px;
+            }
+
+            .hero-content p {
+                font-size: 16px;
+            }
+
+            .hero-buttons {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            .hero-buttons .btn {
+                width: 100%;
+            }
+
+            .hero-stats {
+                gap: 24px;
+            }
+
+            .hero-stat-value {
+                font-size: 24px;
             }
 
             .section {
@@ -794,13 +866,60 @@
                 font-size: 28px;
             }
 
+            .section-subtitle {
+                font-size: 15px;
+            }
+
             .features-grid {
                 grid-template-columns: 1fr;
             }
 
+            .feature-card {
+                padding: 24px;
+            }
+
+            /* Pricing responsiveness */
             .pricing-grid {
                 grid-template-columns: 1fr;
                 max-width: 400px;
+            }
+
+            .pricing-card {
+                padding: 24px;
+            }
+
+            .pricing-card.featured {
+                transform: none;
+            }
+
+            .pricing-card.featured:hover {
+                transform: translateY(-8px);
+            }
+
+            .price-value {
+                font-size: 36px;
+            }
+
+            .billing-toggle {
+                flex-wrap: wrap;
+                gap: 12px;
+            }
+
+            .discount-badge {
+                margin-left: 0;
+            }
+
+            /* CTA Section */
+            .cta-section {
+                padding: 60px 20px;
+            }
+
+            .cta-section h2 {
+                font-size: 28px;
+            }
+
+            .cta-section p {
+                font-size: 16px;
             }
 
             .footer-container {
@@ -812,6 +931,39 @@
                 flex-direction: column;
                 gap: 16px;
                 text-align: center;
+            }
+        }
+
+        /* Extra small screens */
+        @media (max-width: 480px) {
+            .hero-content h1 {
+                font-size: 26px;
+            }
+
+            .section-title {
+                font-size: 24px;
+            }
+
+            .hero-stats {
+                flex-direction: column;
+                gap: 16px;
+            }
+
+            .pricing-card {
+                padding: 20px;
+            }
+
+            .price-value {
+                font-size: 32px;
+            }
+
+            .plan-name {
+                font-size: 20px;
+            }
+
+            .btn-lg {
+                padding: 14px 24px;
+                font-size: 15px;
             }
         }
 
@@ -1094,7 +1246,8 @@
         <div class="section-header">
             <span class="section-label">Preços</span>
             <h2 class="section-title">Planos para todos os tamanhos</h2>
-            <p class="section-subtitle">Escolha o plano ideal para o seu negócio. Comece com 7 dias grátis.</p>
+            <p class="section-subtitle">Todos os planos incluem <strong>7 dias grátis</strong> para você testar. Sem
+                cartão de crédito.</p>
         </div>
 
         <div class="billing-toggle">
@@ -1112,7 +1265,7 @@
     <!-- CTA Section -->
     <section class="cta-section">
         <h2>Pronto para eliminar perdas?</h2>
-        <p>Comece agora com 7 dias grátis. Sem compromisso, sem cartão de crédito.</p>
+        <p>Cadastre-se e teste por 7 dias grátis. Depois escolha o plano ideal para você.</p>
         <a href="app/trial.html" class="btn btn-lg">
             Cadastre-se Agora e Teste Grátis
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -1340,8 +1493,8 @@
                                     Falar com Vendas
                                 </a>
                             ` : `
-                                <a href="app/planos.html" class="btn ${isFeatured ? 'btn-primary' : 'btn-outline'}">
-                                    ${isFeatured ? 'Começar Agora' : 'Selecionar'}
+                                <a href="app/trial.html" class="btn ${isFeatured ? 'btn-primary' : 'btn-outline'}">
+                                    ${isFeatured ? 'Começar Agora' : 'Testar Grátis'}
                                 </a>
                             `}
                         </div>
