Atualizações em dashboard, locais, lojas, perdas, planos, produtos, roles, usuarios, validade e index

--- a/app/locais.html
+++ b/app/locais.html
@@ -108,8 +108,17 @@
                     <span class="user-role" id="userRole">Carregando...</span>
                 </div>
             </div>
+            <a href="planos.html" class="btn btn-primary btn-sm"
+                style="margin-top: 10px; width: 100%; display: flex; align-items: center; justify-content: center; gap: 8px;">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16">
+                    <polygon
+                        points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                    </polygon>
+                </svg>
+                Meu Plano
+            </a>
             <button class="btn btn-ghost btn-sm" onclick="auth.signOut()"
-                style="margin-top: 10px; width: 100%;">Sair</button>
+                style="margin-top: 8px; width: 100%;">Sair</button>
         </div>
     </aside>
 
