--- a/index.html
+++ b/index.html
@@ -1332,8 +1332,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase.js"></script>
     <script>
         // =====================================================
         // NAVBAR SCROLL
@@ -1350,7 +1348,68 @@
         // =====================================================
         // PRICING - DYNAMIC FROM SUPABASE
         // =====================================================
-        let planos = [];
+        let planos = [
+            {
+                id: '72e555c3-d5a3-44cb-a76f-d0e95f9e2706',
+                nome: 'Gratuito',
+                preco_mensal: 0,
+                preco_anual: 0,
+                descricao: 'Plano gratuito para teste',
+                destaque: false,
+                ordem: 0,
+                features: []
+            },
+            {
+                id: '7b049e15-47d6-4b45-8abe-303a926c0199',
+                nome: 'Starter',
+                preco_mensal: 79,
+                preco_anual: 759,
+                descricao: 'Ideal para pequenos negócios',
+                destaque: false,
+                ordem: 1,
+                features: ['5.000 produtos', '3 usuários', '1 loja', 'Suporte por email',]
+            },
+            {
+                id: 'ec582d76-260c-4012-8cb1-44a8a28ac5eb',
+                nome: 'Básico',
+                preco_mensal: 149,
+                preco_anual: 1429,
+                descricao: 'Para negócios em crescimento',
+                destaque: true,
+                ordem: 2,
+                features: ['10.000 produtos', '10 usuários', '3 lojas', 'Suporte prioritário',]
+            },
+            {
+                id: '8f4aaa4d-c2ce-484c-b3f7-a98fa263319e',
+                nome: 'Profissional',
+                preco_mensal: 299,
+                preco_anual: 2869,
+                descricao: 'Para redes de lojas',
+                destaque: false,
+                ordem: 3,
+                features: ['50.000 produtos', '30 usuários', '10 lojas', 'Suporte prioritário']
+            },
+            {
+                id: '80177a42-ebcd-4cee-ae58-43211b4bfde1',
+                nome: 'Personalizado',
+                preco_mensal: 0,
+                preco_anual: 0,
+                descricao: 'Plano customizado para suas necessidades',
+                destaque: false,
+                ordem: 4,
+                features: ['Produtos personalizados', 'Usuários personalizados', 'Lojas personalizadas', 'Suporte dedicado']
+            },
+            {
+                id: '665e3eb9-ca1e-499d-a40b-275aa5e4f080',
+                nome: 'Enterprise',
+                preco_mensal: 0,
+                preco_anual: 0,
+                descricao: 'Solução completa para grandes empresas',
+                destaque: false,
+                ordem: 5,
+                features: ['Produtos ilimitados', 'Usuários ilimitados', 'Lojas ilimitadas', 'Integrações customizadas']
+            }
+        ];
         let isAnual = false;
 
         const billingToggle = document.getElementById('billingToggle');
@@ -1367,77 +1426,6 @@
             renderPlanos();
         });
 
-        // Carregar planos do Supabase
-        async function carregarPlanos() {
-            try {
-                if (!window.supabaseClient) {
-                    await new Promise(resolve => {
-                        window.addEventListener('supabaseReady', resolve, { once: true });
-                    });
-                }
-
-                const { data, error } = await window.supabaseClient
-                    .from('planos')
-                    .select('*')
-                    .eq('ativo', true)
-                    .eq('visivel', true)
-                    .order('ordem', { ascending: true });
-
-                if (error) throw error;
-
-                planos = data || [];
-
-                // FALLBACK: Se não houver planos no banco, usar estáticos
-                if (planos.length === 0) {
-                    console.warn('Nenhum plano encontrado no banco. Usando fallback estático.');
-                    planos = [
-                        {
-                            nome: 'Starter',
-                            preco_mensal: 79,
-                            preco_anual: 759,
-                            descricao: 'Ideal para pequenos negócios',
-                            destaque: false,
-                            ordem: 1,
-                            features: ['5.000 produtos', '3 usuários', '1 loja', 'Suporte por email', 'Relatórios básicos']
-                        },
-                        {
-                            nome: 'Básico',
-                            preco_mensal: 149,
-                            preco_anual: 1429,
-                            descricao: 'Para negócios em crescimento',
-                            destaque: true,
-                            ordem: 2,
-                            features: ['10.000 produtos', '10 usuários', '3 lojas', 'Suporte prioritário', 'Relatórios avançados', 'Exportação de dados']
-                        },
-                        {
-                            nome: 'Profissional',
-                            preco_mensal: 299,
-                            preco_anual: 2869,
-                            descricao: 'Para redes de lojas',
-                            destaque: false,
-                            ordem: 3,
-                            features: ['50.000 produtos', '30 usuários', '10 lojas', 'Suporte 24/7', 'Relatórios personalizados', 'API de integração', 'Treinamento incluso']
-                        },
-                        {
-                            nome: 'Enterprise',
-                            preco_mensal: 0,
-                            preco_anual: 0,
-                            descricao: 'Solução completa para grandes empresas',
-                            destaque: false,
-                            ordem: 5,
-                            features: ['Produtos ilimitados', 'Usuários ilimitados', 'Lojas ilimitadas', 'Suporte VIP 24/7', 'API completa', 'Integrações customizadas', 'SLA garantido', 'Gerente de conta dedicado']
-                        }
-                    ];
-                }
-
-                renderPlanos();
-
-            } catch (error) {
-                console.error('Erro ao carregar planos:', error);
-                pricingGrid.innerHTML = '<div class="pricing-loading" style="color: var(--color-danger);">Erro ao carregar planos.</div>';
-            }
-        }
-
         // Renderizar planos
         function renderPlanos() {
             if (planos.length === 0) {
@@ -1450,6 +1438,7 @@
                 const periodo = isAnual ? '/ano' : '/mês';
                 const isFeatured = plano.destaque;
                 const isContact = preco === 0 && (plano.nome === 'Personalizado' || plano.nome === 'Enterprise');
+                const isFree = plano.nome === 'Gratuito';
 
                 let features = [];
                 try {
@@ -1494,7 +1483,7 @@
                                 </a>
                             ` : `
                                 <a href="app/trial.html" class="btn ${isFeatured ? 'btn-primary' : 'btn-outline'}">
-                                    ${isFeatured ? 'Começar Agora' : 'Testar Grátis'}
+                                    ${isFree ? 'Teste Grátis' : 'COMEÇAR AGORA'}
                                 </a>
                             `}
                         </div>
@@ -1515,7 +1504,7 @@
         });
 
         // Init
-        document.addEventListener('DOMContentLoaded', carregarPlanos);
+        document.addEventListener('DOMContentLoaded', renderPlanos);
     </script>
 </body>
 
