feat: integração stripe checkout nas páginas de planos e bloqueio

--- a/app/bloqueado.html
+++ b/app/bloqueado.html
@@ -230,11 +230,12 @@
         </div>
 
         <div class="blocked-footer">
-            <p>Dúvidas? <a href="mailto:suporte@datacerta.com.br">Entre em contato</a></p>
+            <p>Dúvidas? <a href="mailto:datacerta.contato@gmail.com">Entre em contato</a></p>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src=" https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="../js/supabase.js"></script>
     <script src="js/checkout.js"></script>
     <script>
