--- a/app/checkout-sucesso.html
+++ b/app/checkout-sucesso.html
@@ -229,7 +229,7 @@
                 <a href="planos.html" class="btn btn-primary">
                     Tentar Novamente
                 </a>
-                <a href="mailto:suporte@datacerta.com.br" class="btn btn-outline">
+                <a href="mailto:datacerta.contato@gmail.com" class="btn btn-outline">
                     Contactar Suporte
                 </a>
             </div>
@@ -237,6 +237,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="../js/supabase.js"></script>
     <script src="js/checkout.js"></script>
     <script>
